# nimbus

./: .gitignore  .trivyignore  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  compose.env.sample  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  security-scans.yaml
containers/ai-eval-runner/: Dockerfile  package-lock.json  package.json  run_eval.js
deploy/helm/nimbus/: Chart.yaml  values.yaml
deploy/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/bootstrap/: bootstrap-agent.sh  bootstrap-nimbus.sh
deployment/: nimbus-agent.service
deployment/network/: egress-policies.yaml
deployment/openshift/: nimbus.yaml
deployment/selinux/: nimbus.cil
deployment/supply-chain/: image-allow.txt  image-deny.txt
docs/: CLICKHOUSE_SCHEMA.md  DOCKER_REGISTRY_ORG_BOUNDARIES.md  EXECUTOR_SYSTEM.md  FIRECRACKER_SECURITY.md  PRE_PILOT_GAPS.md  PRE_PILOT_READINESS.md  SELF_REVIEW.md  clickhouse-isolation.md  clickhouse-rls.md  configuration.md  getting-started.md  github-actions-migration.md  gpu-isolation.md  isolation-and-ops-gaps.md  nimbus-feature-guide.md  onboarding.md  operations.md  policy-as-code.md  roi-calculator.md  runbook.md  testing-hardening-roadmap.md  threat-model.md
examples/github-actions-migration/: README.md  importer-config.yaml  workflow-nimbus.yml  workflow-original.yml
migrations/: 001_add_executor_column.sql  README.md
migrations/clickhouse/: 001_logging_rls.sql
scripts/: bootstrap_compose.py  clickhouse_migrate.py  compose_manager.py  create_golden_snapshot.py  dependency_audit.sh  install-security.sh  nimbus-privileged-setup.sh  privileged-setup.sh  quickstart_compose.py  run_smoke.py  setup_firecracker_assets.py  setup_seccomp_profile.py  show_performance_stats.py
src/: __init__.py
src/boto3/: __init__.py  session.py
src/botocore/: __init__.py  client.py  exceptions.py  session.py
src/nimbus/cache_proxy/: app.py  github_cache.py  main.py
src/nimbus/cli/: admin.py  auth.py  cache.py  jobs.py  logs.py  report.py
src/nimbus/common/: clickhouse_migrations.py  http_security.py  metrics.py  networking.py  observability.py  ratelimit.py  schemas.py  security.py  settings.py  supply_chain.py
src/nimbus/control_plane/: app.py  compliance.py  db.py  github.py  identity_store.py  jobs.py  main.py  observability.py  policy.py  saml.py  scim.py
src/nimbus/docker_cache/: app.py
src/nimbus/host_agent/: agent.py  firecracker.py  main.py  near_cache.py  reaper.py  security.py  ssh.py  state.py
src/nimbus/logging_pipeline/: app.py  main.py
src/nimbus/optional/: ssh_dns.py
src/nimbus/rootfs/: __init__.py  attestation.py
src/nimbus/runners/: __init__.py  base.py  docker.py  firecracker.py  gpu.py  images.py  performance_monitor.py  pool_manager.py  resource_manager.py
src/nimbus/tools/: snapshot_builder.py
src/sigstore/: __init__.py  verify.py
src/smith/cache_proxy/: app.py  main.py
src/smith/cli/: admin.py  auth.py  cache.py  jobs.py  logs.py  report.py
src/smith/common/: observability.py  schemas.py  security.py  settings.py
src/smith/control_plane/: app.py  db.py  jobs.py  main.py
src/smith/host_agent/: agent.py  firecracker.py  main.py
src/smith/logging_pipeline/: app.py  main.py
tests/: conftest.py  test_bootstrap_compose.py  test_cache_proxy_github_cache.py  test_cache_proxy_resilience.py  test_cli_admin.py  test_cli_auth.py  test_cli_cache.py  test_cli_jobs.py  test_cli_logs.py  test_clickhouse_migrations.py  test_compose_manager.py  test_control_plane_app.py  test_control_plane_db.py  test_control_plane_identity.py  test_control_plane_metadata.py  test_control_plane_observability.py  test_control_plane_security.py  test_control_plane_ssh.py  test_docker_cache.py  test_docker_executor.py  test_executor_integration.py  test_executor_interface.py  test_firecracker_hardening.py  test_gpu_executor.py  test_host_agent_reaper.py  test_host_agent_retry.py  test_host_agent_security.py  test_host_agent_ssh.py  test_host_agent_watchdog.py  test_logging_pipeline_metadata.py  test_logging_pipeline_metrics.py  test_metadata.py  test_near_cache.py  test_observability.py  test_policy.py  test_pool_manager.py  test_rate_limiter.py  test_reporting.py  test_resource_manager.py  test_rootfs_pipeline.py  (+5 more)
tests/integration/: test_end_to_end.py  test_operational_resilience.py
tests/policy/: test_egress_policy.py  test_logging_tenant_scope.py  test_rbac_policy.py
tests/property/: test_cache_sanitization.py  test_lease_fencing.py  test_webhook_properties.py
tests/system/: test_compose_stack.py
tests/utils/: __init__.py  database.py
tools/: generate_spot_fleet_dashboard.py  roi_calculator.py
web/: README.md  bun.lockb  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx  settingsStorage.ts  types.ts
(+33 files in other folders)
