[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "nimbus"
version = "0.1.0"
description = "Nimbus: control plane and host agent prototype for accelerated GitHub Actions"
authors = [
  { name = "EvalOps" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.118,<0.121",
  "uvicorn[standard]>=0.30,<0.32",
  "httpx>=0.27,<0.28",
  "pydantic>=2.7,<2.9",
  "pydantic-settings>=2.2,<2.3",
  "redis>=5.0,<5.1",
  "sqlalchemy>=2.0,<2.1",
  "psycopg[binary]>=3.1,<3.2",
  "asyncpg>=0.29,<0.30",
  "aiosqlite>=0.19,<0.20",
  "pyroute2>=0.7,<0.8",
  "python-dotenv>=1.0,<1.1",
  "PyJWT[crypto]>=2.8,<2.9",
  "pysaml2>=7.5,<7.6",
  "signxml>=4.0.4,<4.3",
  "defusedxml>=0.7,<0.8",
  "pyyaml>=6.0,<7",
  "python-multipart>=0.0.19,<0.0.20",
  "starlette>=0.49.1,<0.50",
  "sigstore>=2.1.5,<3",
  "spdx-tools>=0.7,<0.8",
  "boto3>=1.35,<1.36",
  "structlog>=24.1,<26",
  "opentelemetry-api>=1.37,<1.38",
  "opentelemetry-sdk>=1.37,<1.38",
  "opentelemetry-exporter-otlp>=1.37,<1.38",
  "opentelemetry-instrumentation-fastapi>=0.58b0,<0.59",
  "docker>=7.0,<8.0",
  "opentelemetry-instrumentation-httpx>=0.58b0,<0.59"
]

[project.scripts]
nimbus-create-snapshot = "scripts.create_golden_snapshot:main"
nimbus-clickhouse-migrate = "scripts.clickhouse_migrate:main"

[project.optional-dependencies]
host = [
  "structlog>=24.1,<26",
  "aiodocker>=0.21,<0.22"
]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=7.0,<8.0",
  "coverage>=7.6,<8.0",
  "hypothesis>=6.108,<7.0",
  "ruff>=0.5,<0.6"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[tool.hatch.build.targets.wheel]
packages = ["src/nimbus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "--strict-config --strict-markers"
markers = [
    "integration: marks tests as integration tests (may require external services)",
]
